--- a/home.html
+++ b/home.html
@@ -105,7 +105,7 @@
                 <!--Text-->
                 <p style="font-size: 20px;" class="card-text">Find a random movie from any genre at the click of a button.</p>
                 <!-- Provides extra visual weight and identifies the primary action in a set of buttons -->
-                <a class="btn btn-light-blue btn-md" href="http://localhost:8080/randomMovie">Go Now</a>
+                <a class="btn btn-light-blue btn-md" href="randomMovie.html">Go Now</a>
 
             </div>
 
@@ -131,7 +131,7 @@
                 <!--Text-->
                 <p style="font-size: 20px;" class="card-text">Find a random TV show from any genre at the click of a button.</p>
                 <!-- Provides extra visual weight and identifies the primary action in a set of buttons -->
-                <a class="btn btn-light-blue btn-md" href="http://localhost:8080/randomTV">Go Now</a>
+                <a class="btn btn-light-blue btn-md" href="randomTV.html">Go Now</a>
 
             </div>
 
@@ -157,7 +157,7 @@
                 <!--Text-->
                 <p style="font-size: 20px;" class="card-text">Search an actor or actresses name to see three movies they are known for.</p>
                 <!-- Provides extra visual weight and identifies the primary action in a set of buttons -->
-                <a class="btn btn-light-blue btn-md" href="http://localhost:8080/name">Go Now</a>
+                <a class="btn btn-light-blue btn-md" href="nameSearch.html">Go Now</a>
             </div>
 
         </div>
