--- a/randomMovie.html
+++ b/randomMovie.html
@@ -115,7 +115,7 @@
 
     <div class="randomButtonDiv" style="margin-bottom: 20px">
         <button class="btn btn-danger" id="randomMovieBtn" style="font-size: 20px; display: block; margin: 0 auto; border-radius: 50%; height: 60px;">
-            <span style="margin-top: 5px;" class="glyphicon glyphicon-random"></span></button>
+            <span style="margin-top: 5px;" class="fa fa-random"></span></button>
     </div>
 
 </div>
