--- a/randomTV.html
+++ b/randomTV.html
@@ -42,8 +42,7 @@
 <div id="movieInfoDiv">
 
     <div class="randomButtonDiv" style="margin-bottom: 20px">
-        <button class="btn btn-danger" id="randomTvBtn" style="font-size: 20px; display: block; margin: 0 auto; border-radius: 50%; height: 60px;">
-            <span style="margin-top: 5px;" class="fa fa-random"></span></button>
+      <button class="btn btn-primary" style="font-size: 20px; display: block; margin: 0 auto; border-radius: 50%; height: 60px;"><i class="fa fa-random mr-1"></i></button>
     </div>
 
 </div>
