--- a/randomTV.html
+++ b/randomTV.html
@@ -42,7 +42,7 @@
 <div id="movieInfoDiv">
 
     <div class="randomButtonDiv" style="margin-bottom: 20px">
-      <button class="btn btn-primary" style="font-size: 20px; display: block; margin: 0 auto; border-radius: 50%; height: 60px;"><i class="fa fa-random mr-1"></i></button>
+      <button id="randomTvBtn" class="btn btn-primary" style="font-size: 20px; display: block; margin: 0 auto; border-radius: 50%; height: 80px;"><i class="fa fa-random mr-1" style="font-size: 20px"></i></button>
     </div>
 
 </div>
