--- a/nameSearch.html
+++ b/nameSearch.html
@@ -6,6 +6,7 @@
 
     <link href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.1.3/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/mdbootstrap/4.5.9/css/mdb.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css">
     <link rel="stylesheet" href="style.css">
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
@@ -16,62 +17,53 @@
 </head>
 <body>
 
-<!-- Navbar -->
-<nav class="navbar fixed-top navbar-expand-lg navbar-dark scrolling-navbar" style="background-color: rgba(43, 187, 173, 0.5);">
-    <div class="container">
+<div id="mySidenav" class="sidenav" style="z-index: 501; background-color: #ffffff">
+    <div class="backgroundOverlay"></div>
 
-        <!-- Brand -->
-        <a  href="http://localhost:8080/" class="navbar-brand">
-            <strong style="color: #ffffff;">W2W</strong>
-        </a>
+    <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
 
-        <!-- Collapse -->
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
-                aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
+    <img class="sideNavLogo" src="images/W2Wheader.png">
+    <hr>
 
-        <!-- Links -->
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
-
-            <!-- Left -->
-            <ul class="navbar-nav mr-auto">
-                <li class="nav-item">
-                    <a class="nav-link" href="http://localhost:8080/randomMovie">Random Movie</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="http://localhost:8080/randomTV">Random TV Show</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="http://localhost:8080/name">Search By Name</a>
-                </li>
-            </ul>
-
-            <!-- Right -->
-            <ul class="navbar-nav nav-flex-icons">
-                <li class="nav-item">
-                    <a href="https://www.facebook.com/mdbootstrap" class="nav-link" target="_blank">
-                        <i class="fa fa-facebook"></i>
-                    </a>
-                </li>
-                <li class="nav-item">
-                    <a href="https://twitter.com/MDBootstrap" class="nav-link" target="_blank">
-                        <i class="fa fa-twitter"></i>
-                    </a>
-                </li>
-            </ul>
-
-        </div>
-
-        <form class="form-inline">
-            <div class="md-form mt-0">
-                <input class="form-control mr-sm-2" type="text" placeholder="Search" aria-label="Search"/>
-            </div>
-        </form>
-
+    <div class="md-form" style="width: 100%; display: inline-block; margin-top: 0;">
+        <input class="form-control" style="padding-left: 10px;" type="text" placeholder="Search" aria-label="Search">
     </div>
-</nav>
-<!-- Navbar -->
+
+    <div>
+        <a id="link1" class="nav-link waves-effect" href="home.html">
+            <i class="fa fa-chevron-right"></i>
+            Home
+        </a>
+        <a id="link2" class="nav-link waves-effect" href="randomTV.html">
+            <i class="fa fa-chevron-right"></i>
+            Random TV Shows
+        </a>
+        <a id="link3" class="nav-link waves-effect" href="randomMovie.html">
+            <i class="fa fa-chevron-right"></i>
+            Random Movies
+        </a>
+        <a id="link4" class="nav-link waves-effect" href="#">
+            <i class="fa fa-chevron-right"></i>
+            About
+        </a>
+    </div>
+</div>
+
+<span style="font-size:30px;cursor:pointer; position: absolute; z-index: 500; margin-left: 20px; color: #000000;" onclick="openNav()">&#9776;</span>
+
+<script>
+    function openNav() {
+        document.getElementById("mySidenav").style.width = "250px";
+        document.getElementById("sideNavOverlay").style.backgroundColor = "rgba(0,0,0,0.5)";
+    }
+
+    function closeNav() {
+        document.getElementById("mySidenav").style.width = "0";
+        document.getElementById("sideNavOverlay").style.backgroundColor = "transparent";
+
+    }
+</script>
+
 
 
 <div style="width: 25%; margin: 0 auto; transform: translateY(50px);" class="md-form">
@@ -80,14 +72,206 @@
     <button id="searchBtn" type="button" class="btn btn-default">Search</button>
 </div>
 
-<div style="transform: translateY(100px);" class="view overlay">
+<!--<div style="transform: translateY(100px);" class="view overlay">-->
 
-    <div style="width: 80%; margin: 0 auto; transform: translateY(100px); padding: 50px;" class="nameDiv card card-body">
-        <img class="nameImg" src=" "/>
+    <!--<div style="width: 80%; margin: 0 auto; transform: translateY(100px); padding: 50px;" class="nameDiv card card-body">-->
+        <!--<img class="nameImg" src=" "/>-->
+    <!--</div>-->
+
+    <!--<div class="mask rgba-white-slight"></div>-->
+<!--</div>-->
+
+
+<script>
+
+    $("#searchBtn").on("click", function (event) {
+        event.preventDefault();
+
+        var searchText = $("#searchByName").val();
+
+        var settings = {
+            "async": true,
+            "crossDomain": true,
+            "url": "https://api.themoviedb.org/3/search/person?include_adult=false&page=1&query=" + searchText + "&language=en-US&api_key=b2b33767c6b429003530678acd077911",
+            "method": "GET",
+            "dataType": "json",
+            "headers": {},
+            "data": "{}"
+        };
+
+        $.ajax(settings).done(function (response) {
+            console.log(response);
+            var results = response.results;
+            for (var i = 0; i < results.length; i++) {
+
+                $("#personCard").append('<div id="cardImage" class="view overlay"><img class="card-img-top" src="http://image.tmdb.org/t/p/original' + response.results[i].profile_path + '"/><div class="mask rgba-white-slight" style="z-index: 500"></div></div><div class="card-body"></div>');
+                $(".card-body").append('<span id="personName">' + response.results[i].name + '</span>');
+                $("#knownFor").append('<span>' + "Appears in:" + '</span>' +
+                    '<hr>');
+                <!-- MOVIE 1 -->
+                $("#movie1").append('<img class="name" src="http://image.tmdb.org/t/p/original' + response.results[i].known_for[0].poster_path + '" style="width: 100%"/>');
+                $("#movieTitle1").append('<span>' + response.results[i].known_for[0].original_title + '</span>');
+                $(".modalHeader").append('<h1 class="modalTitle">' + response.results[i].known_for[0].original_title + '</h1>' +
+                    '<h6 class="modalDate">' + "Release Date: " + response.results[i].known_for[0].release_date + '</h6>');
+                $("#modalContent1").append('<p class="overviewText">' + response.results[i].known_for[0].overview + '</p>');
+                $("#modalContent1").append('<ul class="movieRatings">' + "Popularity: " + response.results[i].known_for[0].popularity + '</ul>');
+                $("#modalContent1").append('<ul class="movieRatings">' + "Release Date: " + response.results[i].known_for[0].release_date + '</ul>');
+                $("#modalContent1").append('<ul class="movieRatings">' + "Vote Average: " + response.results[i].known_for[0].vote_average + '</ul>');
+                $("#modalContent1").append('<ul class="movieRatings">' + "Number of Voters: " + response.results[i].known_for[0].vote_count + '</ul>');
+                $(".overviewBtn1").append('<button data-toggle="modal" data-target="#myModal" id="overviewBtn1" type="button" class="btn btn-primary waves-effect">Read Overview</button>\n');
+                $(".nameDiv").append('<hr class="my-4">');
+                <!-- MOVIE 1 -->
+
+                <!-- MOVIE 2 -->
+                $("#movie2").append('<img src="http://image.tmdb.org/t/p/original' + response.results[i].known_for[1].poster_path + '" style="width: 100%;"/>');
+                $("#movieTitle2").append('<span>' + response.results[i].known_for[1].original_title + '</span>');
+                $(".modalHeader2").append('<h1 class="modalTitle">' + response.results[i].known_for[1].original_title + '</h1>' +
+                    '<h6 class="modalDate">' + "Release Date: " + response.results[i].known_for[1].release_date + '</h6>');
+                $("#modalContent2").append('<p class="overviewText">' + response.results[i].known_for[1].overview + '</p>');
+                $("#modalContent2").append('<ul class="movieRatings">' + "Popularity: " + response.results[i].known_for[1].popularity + '</ul>');
+                $("#modalContent2").append('<ul class="movieRatings">' + "Vote Average: " + response.results[i].known_for[1].vote_average + '</ul>');
+                $("#modalContent2").append('<ul class="movieRatings">' + "Number of Voters: " + response.results[i].known_for[1].vote_count + '</ul>');
+                $(".overviewBtn2").append('<button data-toggle="modal" data-target="#myModal2" id="overviewBtn2" type="button" class="btn btn-primary waves-effect">Read Overview</button>\n');
+                <!-- MOVIE 2 -->
+
+                <!-- MOVIE 3 -->
+                $("#movie3").append('<img src="http://image.tmdb.org/t/p/original' + response.results[i].known_for[2].poster_path + '" style="width: 100%;"/>');
+                $("#movieTitle3").append('<span>' + response.results[i].known_for[2].original_title + '</span>');
+                $(".modalHeader3").append('<h1 class="modalTitle">' + response.results[i].known_for[2].original_title + '</h1>' +
+                    '<h6 class="modalDate">' + "Release Date: " + response.results[i].known_for[2].release_date + '</h6>');
+                $("#modalContent3").append('<p class="overviewText">' + response.results[i].known_for[2].overview + '</p>');
+                $("#modalContent3").append('<ul class="movieRatings">' + "Popularity: " + response.results[i].known_for[2].popularity + '</ul>');
+                $("#modalContent3").append('<ul class="movieRatings">' + "Release Date: " + response.results[i].known_for[2].release_date + '</ul>');
+                $("#modalContent3").append('<ul class="movieRatings">' + "Vote Average: " + response.results[i].known_for[2].vote_average + '</ul>');
+                $("#modalContent3").append('<ul class="movieRatings">' + "Number of Voters: " + response.results[i].known_for[2].vote_count + '</ul>');
+                $(".overviewBtn3").append('<button data-toggle="modal" data-target="#myModal3" id="overviewBtn3" type="button" class="btn btn-primary waves-effect">Read Overview</button>\n');
+                <!-- MOVIE 3 -->
+            }
+
+        });
+        $("#searchByName").val("");
+        // $("#modalContent1").empty();
+        // $("#modalContent2").empty();
+        // $("#modalContent3").empty();
+        $("#movie1").empty();
+        $("#movie2").empty();
+        $("#movie3").empty();
+        $("#personCard").empty();
+        $(".card-body").empty();
+        $("#knownFor").empty();
+        $("#movieTitle1").empty();
+        $("#movieTitle2").empty();
+        $("#movieTitle3").empty();
+        $("#overviewBtn1").remove();
+        $("#overviewBtn2").remove();
+        $("#overviewBtn3").remove();
+    });
+
+
+
+</script>
+
+<!-- Section: Blog v.2 -->
+<section id="section" class="text-center my-5">
+
+    <div id="personCard" class="card"></div>
+
+    <!-- Section description -->
+    <p style="margin-top: 20px;" id="knownFor" class="dark-grey-text w-responsive mx-auto mb-5"></p>
+
+    <!-- Grid row -->
+    <div class="row" style="padding: 20px;">
+
+        <!-- MOVIE 1 -->
+        <div class="col-lg-4 col-md-12 mb-lg-0 mb-4">
+
+            <!-- Featured image -->
+            <div id="movie1" class="view overlay rounded z-depth-2 mb-4">
+                <a>
+                    <div class="mask rgba-white-slight"></div>
+                </a>
+            </div>
+            <!-- Post title -->
+            <h4 id="movieTitle1" class="font-weight-bold mb-3"><strong></strong></h4>
+            <!-- Overview Modal -->
+            <div id="myModal" class="modal fade" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+                <div class="modal-dialog">
+                    <div id="modalContent1" class="modal-content">
+                        <div class="modalHeader">
+                            <a id="modalCloseBtn" data-dismiss="modal" aria-label="Close">&times;</a>
+                        </div>
+                     <div class="overviewDiv"></div>
+                    </div>
+                 </div>
+             </div>
+            <!-- Read more button -->
+            <div class="overviewBtn1"></div>
+        </div>
+        <!-- MOVIE 1 -->
+
+
+
+
+        <!-- MOVIE 2 -->
+        <div class="col-lg-4 col-md-6 mb-md-0 mb-4">
+
+            <!-- Featured image -->
+            <div id="movie2" class="view overlay rounded z-depth-2 mb-4">
+                <a>
+                    <div class="mask rgba-white-slight"></div>
+                </a>
+            </div>
+            <!-- Post title -->
+            <h4 id="movieTitle2" class="font-weight-bold mb-3"><strong></strong></h4>
+            <!-- Overview Modal -->
+            <div id="myModal2" class="modal fade" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+                <div class="modal-dialog">
+                    <div id="modalContent2" class="modal-content">
+                        <div class="modalHeader2">
+                            <a id="modalCloseBtn2" data-dismiss="modal" aria-label="Close">&times;</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <!-- Read more button -->
+            <div class="overviewBtn2"></div>
+        </div>
+
+
+
+
+
+        <!-- MOVIE 3 -->
+        <div class="col-lg-4 col-md-6 mb-0">
+            <!-- Featured image -->
+            <div id="movie3" class="view overlay rounded z-depth-2 mb-4">
+                <a>
+                    <div class="mask rgba-white-slight"></div>
+                </a>
+            </div>
+            <!-- Post title -->
+            <h4 id="movieTitle3" class="font-weight-bold mb-3"><strong></strong></h4>
+            <!-- Overview Modal -->
+            <div id="myModal3" class="modal fade" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+                <div class="modal-dialog">
+                    <div id="modalContent3" class="modal-content">
+                        <div class="modalHeader3">
+                            <a id="modalCloseBtn3" data-dismiss="modal" aria-label="Close">&times;</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <!-- Read more button -->
+            <div class="overviewBtn3"></div>
+        </div>
+        <!-- MOVIE 3 -->
     </div>
 
-    <div class="mask rgba-white-slight"></div>
-</div>
+
+
+
+</section>
+<!-- Section: Blog v.2 -->
 
 
 
