--- a/randomTV.html
+++ b/randomTV.html
@@ -14,49 +14,75 @@
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.1.3/js/bootstrap.min.js"></script>
 
 </head>
-<body>
+<body class="randomTvBody">
 
-<div class="card card-cascade wider reverse" style="background-color: transparent;">
+<div id="mySidenav" class="sidenav" style="z-index: 501; background-color: #ffffff">
+    <div class="backgroundOverlay"></div>
 
-    <!-- Card image -->
-    <div class="view overlay">
+    <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
 
-        <div class="welcomeIntro">Click Below for a Random TV Show...</div>
-        <!--<h1 class="welcomeIntro" style="text-align: center; transform: translateY(200%); margin: 0; color: #ffffff; font-family: SF-Pro-Display-Medium;">Click Below for a Random Movie..</h1>-->
-        <img class="welcomeImg" src="images/deadpool2.png" style="width: 45%; position: absolute; margin-left: 28%; bottom: 0; z-index: 200;"/>
-        <!--<div class="loadingScreen" style="display: none"></div>-->
+    <img class="sideNavLogo" src="images/W2Wheader.png">
+    <hr>
+
+    <div class="md-form" style="width: 100%; display: inline-block; margin-top: 0;">
+        <input class="form-control" style="padding-left: 10px;" type="text" placeholder="Search" aria-label="Search">
+    </div>
+
+    <div>
+        <a id="link1" class="nav-link waves-effect" href="home.html">
+            <i class="fa fa-chevron-right"></i>
+            Home
+        </a>
+        <a id="link2" class="nav-link waves-effect" href="randomMovie.html">
+            <i class="fa fa-chevron-right"></i>
+            Random Movies
+        </a>
+        <a id="link3" class="nav-link waves-effect" href="nameSearch.html">
+            <i class="fa fa-chevron-right"></i>
+            Name Search
+        </a>
+        <a id="link4" class="nav-link waves-effect" href="#">
+            <i class="fa fa-chevron-right"></i>
+            About
+        </a>
+    </div>
+</div>
+
+<span style="font-size:30px;cursor:pointer; position: absolute; z-index: 500; margin-left: 40px; margin-top: 20px; color: #ffffff;" onclick="openNav()">&#9776;</span>
+
+<script>
+    function openNav() {
+        document.getElementById("mySidenav").style.width = "250px";
+        document.getElementById("sideNavOverlay").style.backgroundColor = "rgba(0,0,0,0.5)";
+    }
+
+    function closeNav() {
+        document.getElementById("mySidenav").style.width = "0";
+        document.getElementById("sideNavOverlay").style.backgroundColor = "transparent";
+
+    }
+</script>
+
         <div class="randomTvContainer">
+            <div class="welcomeIntro">Click Below for a Random TV Show...</div>
             <div class="tvContainer"></div>
         </div>
-        <div class="mask rgba-white-slight"></div>
-
-    </div>
-    <!-- Card content -->
-    <div class="card-body text-center" style="padding: 0;">
-
-    </div>
-
-</div>
-<!-- Card -->
-
-<div id="movieInfoDiv">
 
     <div class="randomButtonDiv" style="margin-bottom: 20px">
-      <button id="randomTvBtn" class="btn btn-primary" style="font-size: 20px; display: block; margin: 0 auto; border-radius: 50%; height: 80px;"><i class="fa fa-random mr-1" style="font-size: 20px"></i></button>
+      <button id="randomTvBtn" class="btn btn-primary" style="display: block; margin: 0 auto; border-radius: 50%; height: 80px; z-index: 3;"><i class="fa fa-random" style="font-size: 25px"></i></button>
     </div>
-
-</div>
 
 <script>
 
     $("#randomTvBtn").on("click", function (event) {
         event.preventDefault();
 
-        var randomId = Math.floor(Math.random() * 999) + 1;
+        var random_index = Math.floor(Math.random() * 20);
+        var randomPage = Math.floor(Math.random() * 32) + 1;
         var settings = {
             "async": true,
             "crossDomain": true,
-            "url": "https://api.themoviedb.org/3/tv/" + randomId + "?api_key=b2b33767c6b429003530678acd077911&amp;language=en-US",
+            "url": "https://api.themoviedb.org/3/tv/top_rated?page="+ randomPage +"&language=en-US&api_key=b2b33767c6b429003530678acd077911",
             "method": "GET",
             "headers": {},
             "data": "{}",
@@ -84,8 +110,6 @@
                     }
 
                     $(".tvContainer").append('<img id="movieImg" style="padding-top: 20px; height: 500px;" src="' + imgArray[rnd] + '"/>').hide().fadeIn(2000);
-                    $(".tvContainer").append('<a href="https://www.imdb.com" target="_blank"><span style="margin: 10px 0 10px 0; font-size: 25px; position: relative; z-index: 5000; display: inline-block;" class="glyphicon glyphicon-info-sign"></span></a>').hide().fadeIn(2000);
-
 
                 }
             }
@@ -93,16 +117,33 @@
 
         $.ajax(settings).done(function (response) {
             console.log(response);
-            $(".tvContainer").append('<img id="movieImg" onerror="tvError(this)" style="padding-top: 20px; height: 500px;" src="http://image.tmdb.org/t/p/original' + response.poster_path + '"/>').hide().fadeIn(2000);
-            $(".tvContainer").append('<a href="http://www.google.com/search?q=' + response.original_name + '" target="_blank"><span style="margin: 10px 0 10px 0; font-size: 25px; position: relative; z-index: 5000; display: inline-block;" class="glyphicon glyphicon-info-sign"></span></a>').fadeIn(2000);
+            $(".tvContainer").append('<a data-toggle="modal" data-target="#myModal"><img id="movieImg" onerror="imgError(this)" style="height: 500px;" src="http://image.tmdb.org/t/p/original' + response.results[random_index].poster_path + '"/></a>').hide().fadeIn(2000);
+            // $(".tvContainer").append('<a data-toggle="modal" data-target="#myModal" id="signUpBtn"><span style="margin: 10px 0 10px 0; font-size: 25px; position: relative; z-index: 2; display: inline-block;" class="fa fa-info-circle"></span></a>').hide().fadeIn(2000);
+            $("#modalContent1").append("<h6 class='overviewTitle'>Overview: </h6> ");
+            $("#modalContent1").append('<p class="overviewText">' + response.results[random_index].overview + '</p>');
+            $(".modalHeader").append('<h1 class="modalTitle">' + response.results[random_index].original_name + '</h1>' +
+                '<h6 class="modalDate">' + "Release Date: " + response.results[random_index].first_air_date + '</h6>');
 
         });
 
         $(".tvContainer").empty();
         $(".welcomeIntro").empty();
         $(".welcomeImg").remove();
+        $("#modalContent1").empty();
+
     });
 </script>
+
+
+<div id="myModal" class="modal fade" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+    <div class="modal-dialog">
+        <div class="modalHeader">
+            <a id="modalCloseBtn" data-dismiss="modal" aria-label="Close">&times;</a>
+        </div>
+        <div id="modalContent1" class="modal-content"></div>
+    </div>
+</div>
+
 
 <script>
     function tvError(image) {
@@ -130,10 +171,13 @@
         }
 
         $(".tvContainer").append('<img id="movieImg" style="padding-top: 20px; height: 500px;" src="' + imgArray[rnd] + '"/>').hide().fadeIn(2000);
-        $(".tvContainer").append('<a href="https://www.imdb.com" target="_blank"><span style="margin: 10px 0 10px 0; font-size: 25px; position: relative; z-index: 5000; display: inline-block;" class="glyphicon glyphicon-info-sign"></span></a>').hide().fadeIn(2000);
+        $(".tvContainer").append('<a href="https://www.imdb.com" target="_blank"><span style="margin: 10px 0 10px 0; font-size: 25px; position: relative; z-index: 5000; display: inline-block;" class="fa fa-info-circle"></span></a>').hide().fadeIn(2000);
 
     }
 </script>
+
+
+<div id="sideNavOverlay"></div>
 
 
 <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/mdbootstrap/4.5.9/js/mdb.min.js"></script>
