--- a/home.html
+++ b/home.html
@@ -185,7 +185,7 @@
 
             <!--Card image-->
             <div class="view overlay">
-                <img class="card-img-top" src="images/hollywoodsign.jpg" alt="Card image cap"/>
+                <img class="card-img-top" src="images/hollywoodSign.jpg" alt="Card image cap"/>
                 <a href="#!">
                     <div class="mask rgba-white-slight"></div>
                 </a>
