--- a/home.html
+++ b/home.html
@@ -21,7 +21,7 @@
 
         <!-- Brand -->
         <a class="navbar-brand"  href="http://localhost:8080/">
-            <strong style="color: #ffffff;">W2W</strong>
+            <strong style="color: #65737e;">W2W</strong>
         </a>
 
         <!-- Collapse -->
