--- a/home.html
+++ b/home.html
@@ -21,7 +21,7 @@
 
         <!-- Brand -->
         <a class="navbar-brand"  href="http://localhost:8080/">
-            <strong style="color: #65737e;">W2W</strong>
+            <strong style="color: #ffffff;">W2W</strong>
         </a>
 
         <!-- Collapse -->
@@ -123,7 +123,7 @@
 
 
 <!--Carousel Wrapper-->
-<div id="carousel-example-1z" class="carousel slide carousel-fade" data-ride="carousel" style="width: 100%; text-align: center; margin-top: 100px; margin-bottom: 50px; background-color: #ffffff;">
+<div id="carousel-example-1z" class="carousel slide carousel-fade" data-ride="carousel" style="width: 100%; text-align: center; margin-top: 100px; margin-bottom: 50px; background-color: transparent;">
     <h1 style="padding-bottom: 20px;">Movies In Theatres Now</h1>
     <!--Indicators-->
     <ol class="carousel-indicators">
