--- a/home.html
+++ b/home.html
@@ -13,7 +13,7 @@
 
 
 </head>
-<body class="homePage">
+<body class="homeIntro">
 
 <!-- Navbar -->
 <nav class="navbar fixed-top navbar-expand-lg navbar-dark scrolling-navbar" style="background-color: rgba(43, 187, 173, 0.5); position: absolute;">
