--- a/home.html
+++ b/home.html
@@ -81,9 +81,7 @@
 <!--<img src="images/movies.jpg" style="opacity: 0.2; width: 100%; height: 670px;" />-->
 <!--</div>-->
 <div class="homeImage">
-    <video id="video" loop="loop" muted="muted" autoplay="autoplay" class="homeVideo">
-        <source src="images/new4k.webm" type="video/webm">
-    </video>
+<img src="images/newBackground.jpg" style="width: 100%; height: 100%">
 </div>
 
 <script>
