--- a/home.html
+++ b/home.html
@@ -2,12 +2,13 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8" />
-    <!--<meta name="viewport" content="width=device-width, initial-scale=1.0">-->
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>What 2 Watch</title>
 
     <link href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.1.3/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/mdbootstrap/4.5.9/css/mdb.min.css" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="https://unpkg.com/scrollreveal@4"></script>
@@ -81,9 +82,7 @@
 <!--<div class="homeImage">-->
 <!--<img src="images/movies.jpg" style="opacity: 0.2; width: 100%; height: 670px;" />-->
 <!--</div>-->
-<div class="homeImage">
-<img src="images/newBackground.jpg" style="width: 100%; height: 100%">
-</div>
+<div class="homeImage"></div>
 
 <script>
     document.getElementById("video").currentTime = 31;
